# techni-zlecenia-backend

./: Cargo.toml
migrations/: 0001_init.sql  0002_rename_column_in_offers.sql
src/: auth.rs  chat.rs  main.rs  tes2.html  test.html
src/db/: mod.rs  model.rs  postgres.rs
src/routes/: messages.rs  mod.rs  offers.rs  orders.rs  reviews.rs  user.rs
