[package]
name = "techni-zlecenia"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-extra = { version = "0.10.1", features = ["typed-header"] }
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.8", features = ["ws", "macros"] }
futures-util = "0.3.31"
serde_json = "1.0.143"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
shuttle-shared-db = { version = "0.57.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.6", features = ["chrono"] }
tokio = "1.28.2"
chrono = "0.4.42"
argon2 = "0.5.3"
base64 = "0.22.1"
infer = "0.19.0"
reqwest = { version = "0.12.23", features = ["multipart"] }
tower-http = { version = "0.6.6", features = ["cors"] }
